# level3_nlp_finalproject-nlp-12

./: .env.template  .gitattributes  .gitignore  CITATION.cff  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add_new_feature.md
data/: generate_data.py  input_prompt.txt.template  preprocess.ipynb  synthetic_data_process.ipynb
data/data_process_notebooks/: data_concat.ipynb  eval_human.ipynb  evaluation.ipynb  prompt_to_eval.py
data/eda/: eda.ipynb  eda.py
data/prompt/: template_1.txt  template_2.txt  template_3.txt  template_4.txt  template_5.txt  template_6.txt  template_7.txt
finetuning/: app.py  config.yaml  inference.py  langchain_inference.ipynb  merge_lora.py  merge_lora.sh  mk_geval_prompts.py  pyproject.toml  requirements.sh  test.sh  train.py
finetuning/templates/: kullm_test.json  multi.json
finetuning/test/test_dataset/: test_multi.csv  test_single.csv
finetuning/utils/: arguments.py  compute_metrics.py  data_loader.py  merge_lora.py  prompter.py
server/: README.md
server/backend/: app.py  mary.py  models.py  pyproject.toml  welcome_msg.txt
server/backend/config/: settings.py
server/frontend/: package.json
server/frontend/public/: index.html
server/frontend/src/: App.css  App.js  index.css  message.js  randomString.js
server/frontend/test-app/: package-lock.json  package.json
server/frontend/test-app/src/: App.css  App.js
