[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = "Large Langauge Model by Smoked_Salmons"
authors = ["Jihye Mun <munjh1121@gmail.com>", "Gyeongtaek Bahk <afterthougt@gmail.com>", "Jieun Park <imhappyhill@gmail.com>", "Inseo Song <songinseo0910@gmail.com>", "Jihwan Yoon <yjh091500@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
transformers = "^4.30.2"
torch = "2.0.0"
accelerate = "^0.20.1"
datasets = "^2.13.1"
tqdm = "^4.65.0"
pandas = "^2.0.2"
omegaconf = "^2.3.0"
wandb = "^0.15.4"
huggingface-hub = "^0.16.4"
scipy = "^1.11.1"
fire = "^0.5.0"
gradio = "^3.36.1"
langchain = "^0.0.228"
bitsandbytes = "^0.39.1"
peft = { git = "https://github.com/huggingface/peft.git" }
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
motor = "^3.2.0"
pydantic = "1.10.9"
pymongo = "^4.4.0"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"